force-app/main/default/objects/User_Skill_Requirement__c/User_Skill_Requirement__c.object-meta.xml
<CustomObject>
    <label>User Skill Requirement</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>User Skill Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Skill Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>