force-app/main/default/objects/User_Skill_Requirement__c/fields/Project_Feature__c.field-meta.xml
<CustomField>
    <fullName>Project_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Feature</label>
    <referenceTo>Project_Feature__c</referenceTo>
    <relationshipLabel>User Skill Requirements</relationshipLabel>
    <relationshipName>User_Skill_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>