force-app/main/default/objects/User_Skill_Requirement__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>User Skill Requirements</relationshipLabel>
    <relationshipName>User_Skill_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>